[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "toklab"
version = "0.1.0"
description = "Fast bulk tokenizer + token counter for OpenAI BPE encodings."
authors = [{ name = "Mukunda Katta" }]
license = "MIT OR Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["tokenizer", "tiktoken", "bpe", "openai", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MukundaKatta/toklab"
Repository = "https://github.com/MukundaKatta/toklab"
Issues = "https://github.com/MukundaKatta/toklab/issues"
Changelog = "https://github.com/MukundaKatta/toklab/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.4", "maturin>=1.7,<2.0"]

[tool.maturin]
module-name = "toklab._native"
python-source = "python"
manifest-path = "crates/toklab-py/Cargo.toml"
features = ["pyo3/extension-module"]
strip = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "target", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B"]
"examples/**" = ["ARG"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["python/toklab"]

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests/python"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]
