[package]
name = "toklab-py"
description = "PyO3 bindings for toklab-core."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "toklab_native"
crate-type = ["cdylib"]

[dependencies]
toklab-core = { path = "../toklab-core", version = "0.1.1" }
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
